2006-07-16  Neil Williams <linux@codehelp.co.uk>

	* qof/test/test-book-merge.c :
	 qof/test/test-event.c
	 qof/test/test-guid.c
	 qof/test/test-numeric.c
	 qof/test/test-object.c
	 qof/test/test-querynew.c : Ensure tests fail
	reliably.

	* qof/deprecated.c : Use the old gnc-date version 
	as deprecated for those who depend on the bugs.
	* qof/qofchoice.c : tweak to remove newline from 
	debug logs
	* qof/qofundo.c : Problems with clear_undo - 
	temporary fix.
	* qof/qofdate.h : Doxygen tweak.

	* qof/qofsession.c : Added missing QofTime handler 
	for copying between sessions.

	* backend/file/qsf-backend.c : Fix missing (node)
	value from routine to retrieve time string.

2006-07-15  Neil Williams <linux@codehelp.co.uk>

	* qof/qofevent.h : new QOF_EVENT_COMMIT event to 
	use alongside QOF_EVENT_MODIFY to handle before 
	and after edit undo operations.
	* qof/qoflog.c : adding undo the default log modules.
	* qof/qofundo-p.h
	 qof/qofundo.c
	 qof/qofundo.h : Adding public functions to mark
	 entity changes for undo operations.

2006-07-14  Neil Williams <linux@codehelp.co.uk>

	* backend/file/qsf-object.xsd.xml : Add time 
	type to the qsf schema.

	* qof/qofinstance.c : Set a valid time when creating
	a new instance.
	* qof/qoftime.c : Upgrade qof_time_from_tm to
	not use GDate.
	* qof/qofdate.h :
	* qof/qofdate.c : Change prototype of 
	qof_date_format_add to return the first available
	identifier, not assume the user knows this value in
	advance.
	* qof/test/test-date.c : Use new qof_date_format_add
	prototype.
	* po/en_GB.po : Added new strings for date to time
	transition handling option.

2006-07-13  Neil Williams <linux@codehelp.co.uk>

	* qof/qofdate.c : Fix date normalising.
	* qof/qofdate.h : Expand QofDate so that
	non-calculated values can be used to manipulate
	the QofDate within a wider range - glong.
	* qof/qofstrptime.c : Expand year recognition to
	nine significant digits, allowing parsing of years
	upto 999,999,999AD.