@@ -1,3 +1,11 @@
+2006-07-18  Neil Williams <linux@codehelp.co.uk>
+
+	* backend/file/qsf-backend.c :
+	* backend/file/qsf-xml.c :
+	* qof/qofbackend.c :
+	* qof/qofbookmerge.c :
+	* qof/qofdate.c : Memory fixes.
+
 2006-07-16  Neil Williams <linux@codehelp.co.uk>
 
 	* qof/test/test-book-merge.c :
